# bpftrace

./: CMakeLists.txt  flake.nix
.github/include/: ci.py
cmake/: FindLibDebuginfod.cmake  FindLibEntize.cmake
docs/: language.md  stdlib.md
src/: CMakeLists.txt  attached_probe.cpp  bpfbytecode.cpp  bpfbytecode.h  bpftrace.cpp  bpftrace.h  build_info.cpp  child.cpp  child.h  config.cpp  config.h  dwunwind.cpp  dwunwind.h  lexer.l  main.cpp  probe_matcher.cpp  table.cpp  types.h  usyms.cpp  usyms.h
src/ast/passes/: codegen_llvm.cpp  resource_analyser.cpp  semantic_analyser.cpp
src/stdlib/: base.bt
src/stdlib/stack/: dwunwind.bpf.c  ent.bpf.c  expression.h
src/symbols/: CMakeLists.txt  user.cpp  user.h
tests/: CMakeLists.txt  debuginfod-test.sh  parser.cpp  unstable_feature.cpp
tests/runtime/: call  uprobe
tests/runtime/engine/: runner.py
tests/testprogs/: CMakeLists.txt
